fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -273,7 +273,6 @@ input[type=checkbox]:checked ~ label span:nth-child(3) {
   margin-bottom: 15px;
 }
 
-
 /* scroll button */
 
 .scroll-down {
@@ -463,6 +462,10 @@ footer p {
   vertical-align: top;
 }
 
+.last {
+  padding-bottom: 3rem;
+}
+
 .box img {
   width: 100%;
   padding-top: 2rem;
@@ -569,7 +572,6 @@ footer p {
   }
 
 
-
   @media screen and (min-width: 768px) {
     html{
       font-size:14px;
@@ -587,19 +589,20 @@ footer p {
     }
     .box img {
       width:50%;
-      text-align: center;
+      height: auto;
       display: inline-block;
     }
     .full img {
-      width:100%;
+      width:95%;
+      padding-left: 5%;
     }
-    .table{
-      display:table;
+    .table {
+      display: table;
     }
   }
 
   @media screen and (min-width: 1024px) {
     .slogan {
-      width: 60%;
+      width: 50%;
     }
   }
